Sat Mar 24 18:13:39 CET 2012  Jeffrey Lee  <me@phlamethrower.co.uk>
                              John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/align.s: Add.
	* put.c (ReportOverflow): Also show the hex version of value.
	* directive_data.c (GetDefaultAlignValueSize): Add.
	(c_align): Add support for fill value and fill value size.

Sat Mar 24 17:43:41 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* area.c (ValidateORGValue): Add.
	(c_area, c_org): Use ValidateORGValue.
	(Area_Ensure): Set SYMBOL_ABSOLUTE for absolute area.

Sat Mar 24 16:48:47 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* fix.c, fix.h (Fix_CheckForOverflow): Add.
	(Fix_Int): Use Fix_CheckForOverflow.
	* put.c (ReportOverflow): Use Fix_CheckForOverflow.

Sat Mar 24 15:29:51 CET 2012  Jeffrey Lee  <me@phlamethrower.co.uk>

	* main.c (main): Support comma separated include directories.

Sat Mar 24 15:24:05 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* directive_storagemap.c (c_record): Make use of Value_* routines.
	(oStorageMapValue): Initialise type subfield.
	* area.c (c_area): Make use of Value_Int.  Copy complete Value object.

Sat Mar 24 02:09:20 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c (decode): Avoid reporting unaligned instructions twice.
	* area.c (Area_AlignOffset): Tune unaligned warning.
	* error.c (Error_SuppressMsg): Add.  Implements option -NOWarn.
	(errorCore, errorCoreLine): Remove Info, Warning suppress tests.
	(error, errorLine): Add calls to Error_SuppressMsg.
	* main.c, main.h (option_nowarn): Add.
	(main): Add -NOWarn option support.

Wed Mar 21 01:13:14 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* m_cpuctrl.c (m_msr, m_mrs): Corrected minimal architecture version.
	* local.c (c_rout): Add Thumb mode support.

Mon Mar 19 23:24:24 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/operator_index.s: Add tests based on labels.
	* symbols.s (c_import): Implement a more liberal syntax for import
	attributes.