@@ -1,6 +1,6 @@
 ; ASSERT tests:
 
-	AREA	Code, CODE
+	AREA	Code1, CODE
 
 	ASSERT {TRUE}
 
@@ -13,5 +13,23 @@ lbl2
 	ASSERT lbl3=lbl4
 lbl3
 lbl4
+
+	; Test if we can handle local lables in our assert expressions.
+	AREA	Code2, CODE
+
+	ASSERT %FT02 = . + 4
+	B	.
+02
+	B	.
+	ASSERT %BT02 = . - 4
+
+	AREA	Code3, CODE
+	ORG	&8000
+
+	ASSERT %FT03 = . + 4
+	B	.
+03
+	B	.
+	ASSERT %BT03 = . - 4
 
 	END
